--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body class="manrope-font">
 
-    <header class="container mx-auto">
+    <header class=" lg:container lg: mx-auto">
         <nav>
             <div class="navbar bg-base-100 ">
                 <div class="navbar-start ">
@@ -60,8 +60,8 @@
                 </div>
 
 
-                <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1">
+                <div class="navbar-center hidden lg:flex  ">
+                    <ul class="menu menu-horizontal px-1 ">
                         <li><a class="font-bold text-black">Home</a></li>
 
                         <li><a>Service</a></li>
@@ -83,7 +83,7 @@
 
                     <div>
 
-                        <a class="btn bg-btn-bg rounded-full font-bold text-xl">Book Consult <span
+                        <a class="btn bg-btn-bg rounded-full font-bold ">Book Consult <span
                                 class="bg-black text-white p-0.5 rounded-full"> <i
                                     class="fa-solid fa-arrow-right -rotate-40 "></i></span></a>
                     </div>
@@ -91,7 +91,7 @@
 
 
                 </div>
-                <div class="dropdown lg:flex-none flex-1  lg:ml-0 ml-40  ">
+                <div class="dropdown  flex-1   ml-40  lg:hidden ">
                     <div tabindex="0" role="button" class="btn btn-ghost  ">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
@@ -100,7 +100,7 @@
                         </svg>
                     </div>
                     <ul tabindex="0"
-                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-36    shadow">
                         <li><a class="font-bold text-black">Home</a></li>
 
                         <li><a>Service</a></li>
@@ -132,6 +132,12 @@
 
 
     </header>
+
+    <main>
+
+
+
+    </main>
 
 
 
